# cssed-findinfiles-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  compile  config.h.in  config.sub  configure  configure.in
CVS/: Entries  Repository
po/: ChangeLog  POTFILES.in  cssed-findinfiles-plugin.pot  es.po  fr.po
po/CVS/: Entries  Repository
redhat/: cssed-findinfiles-plugin.spec
redhat/CVS/: Entries  Repository
src/: ChangeLog  Makefile.am  Makefile.in  callbacks.c  callbacks.h  findinfiles.c  findinfiles.h  interface.c  interface.h
src/CVS/: Entries  Repository
